[tool.poetry]
name = "repl_python3_beta_WordySubtleOpenlook"
version = "0.1.0"
description = ""
authors = ["https://github.com/hazemmeqdad/discord_webhook"]

[tool.poetry.dependencies]
python = "^3.8"
dhooks = "^1.1.4"
discord-webhook = "^0.9.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
